add: heading to index and photos to assets, clean up class names

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
         <div class="row">
             <div class="col-lg-7">
                 <img src="assets/images/littleparadisesign.jpg" alt="" class="img-fluid about-image">
-                <img src="assets/images/fran.jpg" alt="" class="img-fluid dissapear about-image"> 
+                <img src="assets/images/fran.jpg" alt="" class="img-fluid disappear about-image"> 
             </div>
             <div class="col-lg-5">
                 <article>
