--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
 
     <section class="container appear-second cta max-width-reduce" id="email-form">
         <form method="post" action="#">
-            <h3>Join Our Mailing List! <i class="fas fa-envelope-open-text"></i></h3>
+            <h3 class="alt-font">Join Our Mailing List! <i class="fas fa-envelope-open-text"></i></h3>
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
                 <input type="text" class="form-control" id="name" name="name" required>
