--- a/music.html
+++ b/music.html
@@ -84,7 +84,7 @@
             <h2 class="music-heading">YouTube <i class="fab fa-youtube" id="youtube-logo"></i></h2>
             <div class="row">
                 <div class="col-lg-2"></div>
-                <div class="col-lg-8"><iframe id="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen><p>Your device does not support iframes</p></iframe></div>
+                <div class="col-lg-8"><iframe class="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen><p>Your device does not support iframes</p></iframe></div>
                 <div class="col-lg-2"></div>
             </div>
     </section>
