--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- End of hero image -->
 
     <!--CTA section x 2 -->
-    <section class="container appear-second max-width-reduce" id="cta-section">
+    <section class="container appear-third max-width-reduce" id="cta-section">
         <div class="row">
 
             <div class="col-md-1 d-none d-md-block"></div>
