link: sign up CTA to correct location on contact page

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="col-12 col-md-4 cta">
                 <div class="cta-content">
                     <h2>SIGN UP <i class="fas fa-envelope-open-text"></i></h2>
-                    <a class="btn btn-primary btn-lg" href="contact.html" role="button">Join</a>
+                    <a class="btn btn-primary btn-lg" href="contact.html#email-form" role="button">Join</a>
                 </div>
             </div>
 
