--- a/music.html
+++ b/music.html
@@ -63,14 +63,16 @@
     
     <!-- Embedded SoundCloud playlist section -->
 
-    <section class="container music-content appear-second">
-            <h2 class="music-heading">SoundCloud <i class="fab fa-soundcloud" id="soundcloud-logo"></i></h2>
+    <section class="music-content appear-second">
+        <h2 class="music-heading">SoundCloud <i class="fab fa-soundcloud" id="soundcloud-logo"></i></h2>
+            <div class="container-fluid" id="soundcloud-section">     
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8">
-                    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1189324765&color=%23d85656&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/little-paradise-bristol" title="Little Paradise" target="_blank" style="color: #cccccc; text-decoration: none;">Little Paradise</a> · <a href="https://soundcloud.com/user-777584877/sets/happy-lanes-ep-08-03-2021" title="Happy Lanes - EP (08.03.2021)" target="_blank" style="color: #cccccc; text-decoration: none;">Happy Lanes - EP (08.03.2021)</a></div>
+                    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1189324765&color=%23d85656&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
                 </div>
                 <div class="col-lg-2"></div>
+            </div>
             </div>
     </section>
 
@@ -80,12 +82,14 @@
     </div>
     <!-- Embedded YouTube video section -->
 
-    <section class="container music-content appear-second">
+    <section class="music-content appear-second">
             <h2 class="music-heading">YouTube <i class="fab fa-youtube" id="youtube-logo"></i></h2>
+            <div class="container-fluid" id="youtube-section">
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8"><iframe class="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen><p>Your device does not support iframes</p></iframe></div>
                 <div class="col-lg-2"></div>
+            </div>
             </div>
     </section>
 
@@ -95,7 +99,7 @@
     </div>
     <!-- Available releases section -->
 
-    <section class="container music-content appear-second">
+    <section class="container music-content appear-second" id="release-section">
         <h2 class="music-heading">Releases <i class="fas fa-compact-disc"></i></h2>
         <div class="row">
 
