add: anchor tags to soundcloud and youtube logos

--- a/music.html
+++ b/music.html
@@ -64,7 +64,7 @@
     <!-- Embedded SoundCloud playlist section -->
 
     <section class="music-content appear-second">
-        <h2 class="music-heading">SoundCloud <i class="fab fa-soundcloud" id="soundcloud-logo"></i></h2>
+        <h2 class="music-heading">SoundCloud <a href="https://www.soundcloud.com" target="_blank"><i class="fab fa-soundcloud" id="soundcloud-logo"></i></a></h2>
             <div class="container-fluid" id="soundcloud-section">     
             <div class="row">
                 <div class="col-lg-2"></div>
@@ -83,7 +83,7 @@
     <!-- Embedded YouTube video section -->
 
     <section class="music-content appear-second">
-            <h2 class="music-heading">YouTube <i class="fab fa-youtube" id="youtube-logo"></i></h2>
+            <h2 class="music-heading">YouTube <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube" id="youtube-logo"></i></a></h2>
             <div class="container-fluid" id="youtube-section">
             <div class="row">
                 <div class="col-lg-2"></div>
