delete hr elements on music page

--- a/music.html
+++ b/music.html
@@ -78,7 +78,7 @@
 
     <!-- End of embedded SoundCloud playlist section -->
     <div class="container">
-    <hr>
+    <!-- <hr class="appear-second"> -->
     </div>
     <!-- Embedded YouTube video section -->
 
@@ -95,7 +95,7 @@
 
     <!-- End of embedded YouTube video section -->
     <div class="container">
-    <hr>
+    <!-- <hr class="appear-second"> -->
     </div>
     <!-- Available releases section -->
 
