--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <hr>
 
     <!-- <div class="background-image container-fluid"> -->
-    <section class="container appear-third" id="index-music">
+    <section class="container appear-third max-width-reduce" id="index-music">
         <div class="alt-font">
             <h3 class="index-header">Latest Video</h3>
             <div class="row">
@@ -132,12 +132,12 @@
             </div>
         </div>
         <div class="row music-alert">
-            <div class="col-md-4 d-none d-md-block"></div>
-            <div class="col-md-4">
-                    <h5>Listen to more tunes on our dedicated Music Page <i class="fas fa-volume-up"></i></h5>
-                    <a class="btn btn-primary btn-lg" href="music.html" role="button">Listen</a>
+            <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
+            <div class="col-12 col-sm-8 col-md-6 col-lg-4 cta" id="music-cta">
+                    <h5>Listen to more on our dedicated Music Page <i class="fas fa-volume-up"></i></h5>
+                    <a id="listen" class="btn btn-primary btn-lg" href="music.html" role="button">Listen</a>
             </div>
-            <div class="col-md-4 d-none d-md-block"></div>
+            <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
         </div>
 
     </section>
