--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,7 @@
     <section id="gallery" class="container-fluid appear-second">
         <div class="row">
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/fran.jpg" alt="" class="img-fluid">
+                <img src="assets/images/korg2.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
                 <img src="assets/images/franguitar.jpg" alt="" class="img-fluid">
@@ -78,7 +78,7 @@
                 <img src="assets/images/lpstudio.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/gauntlet.jpg" alt="" class="img-fluid">
+                <img src="assets/images/picks.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
                 <img src="assets/images/fran.jpg" alt="" class="img-fluid">
@@ -90,19 +90,19 @@
                 <img src="assets/images/youownme.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/fran.jpg" alt="" class="img-fluid">
+                <img src="assets/images/mikeguitar2.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/franguitar2.jpg" alt="" class="img-fluid">
+                <img src="assets/images/lpstudio5.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/lea.jpg" alt="" class="img-fluid">
+                <img src="assets/images/boss3.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/littleparadisesign.jpg" alt="" class="img-fluid">
+                <img src="assets/images/boss4.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/niceview.jpg" alt="" class="img-fluid">
+                <img src="assets/images/korg.jpg" alt="" class="img-fluid">
             </div>
 
 
@@ -134,13 +134,13 @@
                 <img src="assets/images/mike5.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/fran4.jpg" alt="" class="img-fluid">
+                <img src="assets/images/korg3.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
                 <img src="assets/images/mike6.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
-                <img src="assets/images/mike7.jpg" alt="" class="img-fluid">
+                <img src="assets/images/mikeguitar3.jpg" alt="" class="img-fluid">
             </div>
         </div>
     </section>
