--- a/index.html
+++ b/index.html
@@ -68,28 +68,20 @@
         <!-- End of navbar -->
     </header>
 
-    <!-- Hero image -->
     <section class="appear-first container-fluid">
         <div class="row">
-
             <div class="col-md-1 d-none d-md-block col-xl-2"></div>
-
             <div class="col-12 col-md-10 col-xl-8" id="hero-outer">
                 <img src="assets/images/hero-image-min.jpg"
                     alt="Drawing of band standing next to Little Paradise road sign" class="img-fluid" id="hero-image">
             </div>
-
             <div class="col-md-1 d-none d-md-block col-xl-2"></div>
         </div>
     </section>
-    <!-- End of hero image -->
 
-    <!--CTA section x 2 -->
     <section class="container appear-third max-width-reduce" id="cta-section">
         <div class="row">
-
             <div class="col-md-1 d-none d-md-block"></div>
-
             <div class="col-12 col-md-4 cta">
                 <div class="cta-content">
                     <h2>DEBUT EP <i class="fas fa-compact-disc"></i></h2>
@@ -108,26 +100,24 @@
             </div>
 
             <div class="col-md-1 d-none d-md-block"></div>
-
         </div>
     </section>
-    <!--End of CTA section -->
 
     <hr>
 
-    <!-- <div class="background-image container-fluid"> -->
     <section class="container appear-third max-width-reduce" id="index-music">
         <div class="alt-font">
             <h3 class="index-header">Latest Video</h3>
             <div class="row">
-                <div class="col-lg-2 d-none d-lg-block">
-                </div>
-                <div class="col-lg-8 youtube-iframe"><iframe class="youtube-iframe"
+                <div class="col-lg-2 d-none d-lg-block"></div>
+                <div class="col-lg-8 youtube-iframe">
+                    <iframe class="youtube-iframe"
                         src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
                         <p>Your device does not support iframes</p>
-                    </iframe></div>
+                    </iframe>
+                </div>
                 <div class="col-lg-2 d-none d-lg-block"></div>
             </div>
         </div>
@@ -141,10 +131,9 @@
         </div>
 
     </section>
-    <!-- </div> -->
 
     <hr>
-    <!-- Tour dates -->
+
     <section class="container alt-font" id="tour-dates">
         <h3 class="index-header">Tour Dates</h3>
         <div class="row">
@@ -199,9 +188,7 @@
         <hr>
         <br>
     </section>
-    <!-- End of tour dates -->
 
-    <!-- Footer -->
     <footer class="page-footer">
         <div>
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
@@ -221,7 +208,6 @@
             </ul>
         </div>
     </footer>
-    <!-- End of footer + page -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
